# localghost

./: .env.example  .gitignore  BACKEND_SPECIFICATION.md  DATABASE_SCHEMA.md  README.md  ROADMAP.md  UX_SPECIFICATION.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_09_11_2106-c01c65dfccdf_create_profiles_table_with_user_roles.py  2025_09_11_2147-3dda9c1e9498_add_local_profiles_and_user_locations_.py  2025_09_22_2051-chat_tables.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  chat_websocket.py  chats.py  itineraries.py  itineraries_proposals.py  locals.py  monitoring.py  notifications.py  profile.py  reviews.py  users.py
backend/app/core/: caching.py  config.py  database.py  dependencies.py  error_handlers.py  middleware.py  monitoring.py  notifications.py  rate_limiting.py  security.py
backend/app/models/: __init__.py  conversation.py  itinerary_proposal.py  itinerary_request.py  local_profile.py  message.py  notification.py  review.py  user.py  user_location.py
backend/app/schemas/: __init__.py  auth.py  chat.py  itinerary.py  notification.py  profile.py  review.py
backend/app/services/: auth_service.py  notification_service.py  profile_service.py
backend/requirements/: base.txt  dev.txt  prod.txt
docs/: GETTING_STARTED.md  LAUNCH_CHECKLIST.md  USER_GUIDE.md
docs/api/: API_REFERENCE.md
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+49 files in other folders)
